Update VcfFiles to use Java 11 List API